--- a/app/src/main/res/layout/fragment_first_choice.xml
+++ b/app/src/main/res/layout/fragment_first_choice.xml
@@ -31,6 +31,7 @@
         style="@style/FirstChoiceLogin"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:height="60dp"
         android:text="Log in"
         android:textAllCaps="false" />
 
@@ -38,6 +39,7 @@
         android:id="@+id/register_btn"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:height="60dp"
         android:text="Register"
         android:textAllCaps="false" />
 
