--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -11,7 +11,7 @@
         android:label="fragment_nav_host"
         tools:layout="@layout/fragment_first_choice" >
         <action
-            android:id="@+id/action_navHostFragment_to_loginFragment"
+            android:id="@+id/action_firstChoiceFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
         <action
             android:id="@+id/action_navHostFragment_to_registerFragment"
@@ -27,5 +27,9 @@
         android:name="com.ameti.quiz.fragment.RegisterFragment"
         android:label="RegisterFragment"
         tools:layout="@layout/fragment_register"
-        />
+        >
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 </navigation>
