--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -17,4 +17,13 @@
 
     <style name="Home" parent="Theme.AppCompat">
     </style>
+
+    <style name="rispostaStyle">
+        <item name="android:layout_width">341dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:backgroundTint">#FF9C27B0</item>
+    </style>
 </resources>
